niro/src/test/resources/negative/using-reserved-word-as-identifier.ql
form UsingReservedWordAsIdentifier {
 "Did you sell a house in 2010?" false: boolean
}